examples/test/testpolicy18093.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18093
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key9: value31
      key7: value44
      key36: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value9
          key46: value12
      podSelector:
        matchLabels:
          key13: value16
          key42: value48
          key14: value26
